[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zed-news"
version = "0.4.0"
description = "news podcast on auto-pilot"
authors = ["Victor Miti <victormiti@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~=3.10"
aerich = "^0.7.1"
apprise = "^1.4.0"
asyncpg = "^0.27.0"
babel = "^2.12.1"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.26.147"
bpython = "^0.24"
cohere = "^4.8.0"
colorama = "^0.4.6"
eyed3 = "^0.9.7"
facebook-sdk = "^3.1.0"
fake-useragent = "^1.1.3"
feedparser = "^6.0.10"
invoke = "^2.1.2"
jinja2 = "^3.1.2"
langchain = "^0.0.348"
mutagen = "^1.46.0"
num2words = "^0.5.12"
openai = "^0.27.7"
psycopg = {extras = ["c", "pool"], version = "^3.1.12"}
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
replicate = "^0.22.0"
requests = "^2.31.0"
tiktoken = "^0.4.0"
together = "^0.2.10"
tomli = "^2.0.1"
torch = "^2.1.1"
tortoise-orm = "^0.20.0"
transformers = "^4.36.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
commitizen = "^3.2.2"
coverage = {version = "<6", extras = ["toml"]}
dslr = "^0.4.0"
pre-commit = "^3.3.2"
ruff = "^0.0.291"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | node_modules
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["B", "C", "E", "F", "W", "B9"]
ignore = ["E203", "E266", "E501"]
exclude = [
  ".git",
  "__pycache__",
  "node_modules",
  "public",
  "venv",
]

[tool.ruff.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.ruff.mccabe]
max-complexity = 10

[tool.coverage.run]
source = ["app/core/"]
branch = true   # Measure branch coverage

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.commitizen]
version_provider = "poetry"
version_files = [
    "app/__init__.py",
    "cron.sh",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false

[tool.aerich]
tortoise_orm = "app.core.db.config.TORTOISE_ORM"
location = "./aerich/migrations"
src_folder = "./."
