[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zed-news"
version = "0.10.0"
description = "Automated news digests from various Zambian 🇿🇲 sources, powered by AI."
authors = ["Victor Miti <https://github.com/engineervix>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~=3.12"

apprise = "^1.4.0"
babel = "^2.12.1"
beautifulsoup4 = "^4.12.2"
bpython = "^0.24"
cohere = "^4.8.0"
colorama = "^0.4.6"
facebook-sdk = "^3.1.0"
fake-useragent = "^1.1.3"
feedparser = "^6.0.10"
google-genai = "^1.15.0"
invoke = "^2.1.2"
jinja2 = "^3.1.2"
langchain = "^0.3.15"
langchain-community = "^0.3.15"
langchain-openai = "^0.3.1"
num2words = "^0.5.12"
openai = "^1.59.9"
peewee = "^3.17.0"
psycopg2 = "^2.9.9"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
requests = "^2.32.0"
together = "^1.2.1"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
commitizen = "^4.8.3"
coverage = "^7.9.0"
dslr = "^0.4.0"
pre-commit = "^4.2.0"
ruff = "^0.11.13"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | node_modules
    | build
    | dist
  )/
)
'''

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  "node_modules",
  "public",
  "venv",
  ".venv",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]
select = ["B", "C", "E", "F", "W", "B9"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
source = ["app/core/"]
branch = true   # Measure branch coverage

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.commitizen]
version_provider = "poetry"
version_files = [
    "app/__init__.py",
    "app/core/social/post.py",
    "cron.sh",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
